<resources>
    <string name="app_name">Registration</string>
    <string name="cont">Continue with Google</string>
    <string name="apple">Continue with Apple</string>
    <string name="text">We\'re glad to see you back. Sign in to explore more!</string>
    <string name="doctor">Doctor</string>
    <string name="user">User</string>
    <string name="gmail">Continue with Gmail</string>
    <string name="profile">Complete Your Profile</string>
    <string name="personalinfo">Personal Information</string>
    <string name="info">Personal Information</string>
    <string name="text1">Helps us get to know you better- provides your basic details for a more personalized experience</string>
    <string name="name">Full Name</string>
    <string name="name1">Enter your full name</string>
    <string name="email">Email Address</string>
    <string name="email1">Enter your email id</string>
    <string name="phone">Phone Number</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="blood">Blood Group</string>
    <string name="marital">Marital Status</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="contact">Emergency Contact</string>
    <string name="location">Location</string>
    <string name="next">Next</string>
    <string name="name2">Invalid name. Only letters and spaces are allowed</string>
    <string name="phone1">Enter phone number</string>
    <string name="loc">Enter location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_events_fragment">Hello Events Fragment</string>
    <string name="hello_appointments_fragment">Hello Appointments Fragment</string>
    <string name="hello_marketplace_fragment">Hello MarketPlace Fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="hello">Hello Umair!</string>
    <string name="how">How are you feeling today!</string>
    <string name="steps">You Steps Count Today</string>
    <string name="step">5217</string>
    <string name="step1">Steps</string>
    <string name="text2">What</string>
    <string name="what">What</string>
    <string name="would">Would</string>
    <string name="you">you like</string>
    <string name="todo">to do today</string>
    <string name="appointment">Appointment</string>
    <string name="chats">Chats</string>
    <string name="video">Video \nConsultation</string>
    <string name="audio">Audio \n Consultation</string>
    <string name="connect">Connect with your\nDoctor and schedule\na appointment</string>
    <string name="track">Track Your Vitals</string>
    <string name="all">View All</string>
    <string name="calorie">Calories burn</string>
    <string name="number">1005</string>
    <string name="calor">Calories</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="number72">72</string>
    <string name="bpm">bpm</string>
    <string name="spo">SPO2</string>
    <string name="numberper">96%</string>
    <string name="afiya">AFIYA\nFITCLUB</string>
    <string name="secure">Secure Your Health Data</string>
    <string name="unbreakable">Unbreakable\nSecurity</string>
    <string name="realtime"><![CDATA[EHR & Real\nTime Insights]]></string>
    <string name="privacy">Privacy First</string>
    <string name="futureproof">Future- Proof\nYour Health</string>
    <string name="monitize">Monitize Your Health Data</string>
    <string name="self">Self Health Data</string>
    <string name="market">MarketPlace</string>
    <string name="band"><![CDATA[Connect Your Band\n& Monitor your Health]]></string>
    <string name="stress">Stress</string>
    <string name="sleep">Sleep</string>
    <string name="hii_am">I AM\' AFIYA AI</string>
    <string name="hii_ican">How I Can Help You!</string>
    <string name="meditation">Psychology and Meditation</string>
    <string name="guided">Guided Meditation Sessions</string>
    <string name="mindfulness"><![CDATA[Mindfulness\n& Breathing\nExercise]]></string>
    <string name="support">Personalized\nSupport</string>
    <string name="relaxation"><![CDATA[Sleep & Relaxations aids]]></string>
    <string name="bankage">Bankage</string>
    <string name="pharmacy">PHARMACY</string>
    <string name="NUTRITION">NUTRITION</string>
    <string name="saves">SAVES LIVES WITH\nAFIYA REAL TIME\nHEALTH MONITORING</string>
    <string name="t1">Zhafira Azalea</string>
    <string name="t2">zafira@gmail.com</string>
    <string name="drawerProfile">My Profile</string>
    <string name="draweAppointments">My Appointments</string>
    <string name="drawermedical">Medical Records</string>
    <string name="drawerconsult">Consultations</string>
    <string name="drawerdoctors">Saved Doctors</string>
    <string name="drawerevents">My Event</string>
    <string name="drawerterms">Terms and Conditions</string>
    <string name="drawerprivacy">Privacy Policy</string>
    <string name="drawerhelps"><![CDATA[Help & FAQs]]></string>
    <string name="drawersign">Sign Out</string>
</resources>