<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_120sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_17sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card1">

            <ImageView
                android:id="@+id/card1_backgroundImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/card_ellipse" />

            <ImageView
                android:id="@+id/card1_overlayImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:src="@drawable/fire"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1Tv"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:text="@string/calorie"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text2Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/text3Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calor"
                        android:textSize="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/cardButtonIv"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_100sdp"
                    android:src="@drawable/card_button_image"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_120sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_17sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card2">

            <ImageView
                android:id="@+id/card2_backgroundImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/card_ellipse" />

            <ImageView
                android:id="@+id/card2_overlayImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:src="@drawable/heart"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:text="@string/heart_rate"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number72"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm"
                        android:textSize="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_100sdp"
                    android:src="@drawable/card_button_image"/>

            </LinearLayout>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_120sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_17sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card3">

            <ImageView
                android:id="@+id/card3_backgroundImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/card_ellipse" />

            <ImageView
                android:id="@+id/card3_overlayImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:src="@drawable/lungs"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:text="@string/spo"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numberper"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bpm"
                        android:textSize="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <ImageView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_100sdp"
                    android:src="@drawable/card_button_image"/>

            </LinearLayout>



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>

