<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_100sdp"
    android:layout_height="@dimen/_120sdp"
    app:cardCornerRadius="10dp"
    android:orientation="horizontal"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="8dp"
    android:elevation="4dp">


        <RelativeLayout
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_card1">

            <ImageView
                android:id="@+id/card1_backgroundImage"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:src="@drawable/card_ellipse" />

            <ImageView
                android:id="@+id/card1_overlayImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_16sdp"
                android:src="@drawable/fire"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1Tv"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:text="@string/calorie"/>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text2Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textStyle="bold"
                        android:textSize="@dimen/_15sdp"
                        android:layout_marginLeft="@dimen/_12sdp"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/text3Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calor"
                        android:textSize="@dimen/_8sdp"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/cardButtonIv"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_100sdp"
                    android:src="@drawable/card_button_image"/>

            </LinearLayout>

        </RelativeLayout>

</androidx.cardview.widget.CardView>
